# indexed_deflate

./: Cargo.toml  README.md
examples/: cmd.rs  itar.rs
src/: base.rs  lib.rs
tests/: basic.rs
